#ident "$Id$"
## -----------------------------------------------------------------------
##   
##   Copyright 1995-2001 H. Peter Anvin - All Rights Reserved
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation, Inc., 675 Mass Ave, Cambridge MA 02139,
##   USA; either version 2 of the License, or (at your option) any later
##   version; incorporated herein by reference.
##
## -----------------------------------------------------------------------

AC_INIT(Makefile.in)
AC_PROG_CC
AC_PROG_INSTALL
